Guryanov_Saveliy made GGScience well

--- a/GGScience/Scientists/templates/Scientists/delete_post.html
+++ b/GGScience/Scientists/templates/Scientists/delete_post.html
@@ -1,8 +1,4 @@
 {% extends 'Scientists/base.html' %}
 {% block content %}
-<form method="post">
-    {% csrf_token %}
-    <p>Вы уверены, что хотите удалить пост "{{post.title}}"?</p>
-    <input class="confirm" type="submit" value="Да">
-</form>
+{% include 'main/main_del.html' %}
 {% endblock %}
