--- a/GGScience/Scientists/static/Scientists/css/styles.css
+++ b/GGScience/Scientists/static/Scientists/css/styles.css
@@ -93,6 +93,7 @@ div .article-panel p {
 }
 
 div.article-panel p.first {
+    padding-right: 20px;
     color: #ffffff;
     margin: 0;
     float: left;
@@ -136,7 +137,7 @@ ul.list-articles li {
 
 ul.mainmenu {
     font-family: "Segoe UI";
-    font-size: 30px;
+    font-size: 24px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -563,9 +564,8 @@ ul.lang-list li a:hover {
 
 .GG_Science {
     font-family: Sans-serif;
-    font-size: 40px;
+    font-size: 30px;
     position: relative;
-    top: -2.5px;
 }
 
 .confirm {
@@ -573,6 +573,12 @@ ul.lang-list li a:hover {
     color: #520e0e;
     font-size: 30px;
     width: 60px;
+}
+.deny {
+    padding: 10px;
+    color: #0d5396;
+    font-size: 30px;
+    width: 120px;
 }
 
 .registration {
