--- a/GGScience/Scientists/templates/Scientists/AddPage.html
+++ b/GGScience/Scientists/templates/Scientists/AddPage.html
@@ -1,13 +1,4 @@
 {% extends 'Scientists/base.html' %}
 {% block content %}
-<h1>{{title}}</h1>
-<form method="post" action="{% url 'addpage' %}" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="form-error">{{ form.non_field_errors }}</div>
-    {% for f in form %}
-    <p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
-    <div class="form-error">{{ f.errors }}</div>
-    {% endfor %}
-    <button class="registration" type="submit">Добавить</button>
-</form>
+{% include 'main/main_add.html' %}
 {% endblock %}
